index page description

--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
   <body>
+    <h3> Transformers For Vision (T4V) Workshops </h3>
+    Please select the venue to view website.
     <ul>
       <li> <a href="cvpr22"> CVPR 2022 </a> </li>
     </ul>
